--- a/src/components/style/Header.less
+++ b/src/components/style/Header.less
@@ -2,6 +2,9 @@
   padding: .8rem 1rem;
   background-color: white;
 }
+.ententa-logo {
+    width: 180px;
+}
 .navbar-brand {
   border-radius: 0px;
   background-color: #013455;
@@ -31,6 +34,7 @@
 
   &:hover {
     color: #005e9b;
+    //font-size: 15px;
   }
 }
 .navbar-collapse.collapse.show .nav-item {
