--- a/src/components/style/Header.less
+++ b/src/components/style/Header.less
@@ -1,18 +1,13 @@
 .navbar {
   padding: .8rem 1rem;
   background-color: white;
+
+  a {
+    text-decoration: none;
+  }
 }
 .ententa-logo {
     width: 180px;
-}
-.navbar-brand {
-  border-radius: 0px;
-  background-color: #013455;
-  color: white !important;
-  font-weight: bold;
-  padding-left: 26px;
-  padding-right: 26px;
-  text-transform: uppercase;
 }
 .navbar-toggler {
   border: none;
@@ -22,16 +17,16 @@
     outline: none;
   }
 }
-.nav-item {
+.nav-span {
   color: #013455;
   margin-right: 15px;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 18px;
   text-transform: uppercase;
   cursor: pointer;
   -webkit-transition:0.5s;
   transition: 0.5s;
-
+  
   &:hover {
     color: #005e9b;
     //font-size: 15px;
